--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-confetti": "^6.2.2",
     "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
+    "react-use": "^17.6.0",
     "sass": "^1.83.4"
   },
   "devDependencies": {
